# collective_effects_cpp

./: CMakeLists.txt  README.md  compile.sh  pyproject.toml  tree.txt  编译方法.txt
_learning_path/: main.aux  main.tex
include/utils/: constants.hpp  integral.hpp  sequence.hpp
include/wakeimpe/: impedance.hpp  longitimpe.hpp  wakefield.hpp
include/wakeimpe/longitudinal/: longitimpe.hpp  longitwake.hpp
include/wakeimpe/transverse/: transvimpe.hpp  transvwake.hpp
python/: readme.md
python/bindings/: CMakeLists.txt  wakeimpe_bindings.cpp
python/collective_effects/: __init__.py
python/collective_effects.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/collective_effects/wakeimpe/: __init__.py  _core.py  _wakeimpe_cpp.pyi
python/collective_effects/wakeimpe/longitudinal/: __init__.py  __init__.pyi
python/collective_effects/wakeimpe/transverse/: __init__.py  __init__.pyi
src/: CMakeLists.txt
src/utils/: integral.cpp
src/wakeimpe/: impedance.cpp  test.cpp  wakefield.cpp
src/wakeimpe/longitudinal/: longitimpe.cpp  longitwake.cpp
src/wakeimpe/transverse/: transvimpe.cpp  transvwake.cpp
test/: test_wakeimpe.cpp  test_wakeimpe.py
